# krypt

./: .editorconfig  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  design_proposal.md  feature_request.md
.github/workflows/: ci.yml  cron.yml  release.yml
crates/files-cli/: Cargo.toml
crates/files-cli/src/: main.rs
crates/files-core/: Cargo.toml
crates/files-core/src/: lib.rs
crates/files-pkg/: Cargo.toml
crates/files-pkg/src/: lib.rs
crates/files-platform/: Cargo.toml
crates/files-platform/src/: lib.rs
crates/krypt-cli/: Cargo.toml
crates/krypt-cli/src/: main.rs
crates/krypt-cli/tests/: e2e.rs
crates/krypt-cli/tests/snapshots/: e2e__doctor.snap  e2e__paths.snap  e2e__validate.snap  e2e__version.snap
crates/krypt-core/: Cargo.toml
crates/krypt-core/src/: adopt.rs  battery.rs  copy.rs  deploy.rs  dispatch.rs  doctor.rs  include.rs  init.rs  lib.rs  manifest.rs  menu.rs  notify.rs  predicate.rs  runner.rs  setup.rs  tool_config.rs  update.rs
crates/krypt-core/src/config/: mod.rs  parse.rs  schema.rs
crates/krypt-core/src/paths/: mod.rs  platform.rs  resolve.rs
crates/krypt-core/tests/: copy_engine.rs  include_fixtures.rs  parse_fixtures.rs  step_var_interpolation.rs
crates/krypt-core/tests/fixtures/: invalid-link-both-srcs.toml  invalid-link-no-src.toml  invalid-platform.toml  invalid-prompt-bad-requires.toml  invalid-step-multiple-kinds.toml  invalid-unknown-field.toml  kitchen-sink.toml
crates/krypt-core/tests/fixtures/include/: glob_root.toml  map_merge_inc.toml  map_merge_root.toml  simple_root.toml  vec_merge_inc.toml  vec_merge_root.toml
crates/krypt-core/tests/fixtures/include/cycle/: b.toml
crates/krypt-core/tests/fixtures/include/depth/: d0.toml  d1.toml  d2.toml  d3.toml  d4.toml  d5.toml  d6.toml  d7.toml  d8.toml  d9.toml
crates/krypt-core/tests/fixtures/include/nested/: a.toml  b.toml  c.toml
crates/krypt-core/tests/fixtures/include/parts/: part_a.toml  part_b.toml  part_c.toml
crates/krypt-pkg/: Cargo.toml
crates/krypt-pkg/src/: apt.rs  brew.rs  deps.rs  detect.rs  dnf.rs  lib.rs  manager.rs  pacman.rs  scoop.rs  winget.rs
crates/krypt-pkg/tests/: manager.rs
crates/krypt-platform/: Cargo.toml
crates/krypt-platform/src/: lib.rs
docs/: migrating-from-bash.md
pkg/aur/: .gitignore  PKGBUILD-bin.in
pkg/homebrew/: files.rb.in  krypt.rb.in
pkg/scoop/: krypt.json.in
