[workspace]
resolver = "3"
members = [
    "crates/krypt-cli",
    "crates/krypt-core",
    "crates/krypt-pkg",
    "crates/krypt-platform",
]

[workspace.package]
version       = "0.0.2"
authors       = ["mxaddict <mxaddict@kryptic.sh>"]
edition       = "2024"
rust-version  = "1.95"
license       = "MIT"
repository    = "https://github.com/kryptic-sh/krypt"
homepage      = "https://github.com/kryptic-sh/krypt"
readme        = "README.md"

[workspace.dependencies]
clap        = { version = "4.5", features = ["derive"] }
color-eyre  = "0.6"
serde       = { version = "1", features = ["derive"] }
toml        = "0.8"
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror   = "2"
glob        = "0.3"
tempfile    = "3"
sha2        = "0.10"
serde_json  = "1"

# Workspace internal crates
krypt-core     = { path = "crates/krypt-core",     version = "0.0.2" }
krypt-pkg      = { path = "crates/krypt-pkg",      version = "0.0.2" }
krypt-platform = { path = "crates/krypt-platform", version = "0.0.2" }

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = "symbols"

[profile.dev]
debug = "limited"
