[package]
name          = "files-platform"
description   = "Cross-platform OS abstractions for the `files` dotfiles manager."
version.workspace      = true
authors.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
readme.workspace       = true

[dependencies]
tracing = { workspace = true }
