[package]
name          = "krypt-cli"
description   = "Cross-platform dotfiles manager. Rust binary. Config-driven. (Installs the `krypt` binary.)"
version.workspace      = true
authors.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
readme.workspace       = true
keywords    = ["dotfiles", "config", "stow", "cli"]
categories  = ["command-line-utilities", "config"]

[[bin]]
name = "krypt"
path = "src/main.rs"

[dependencies]
clap               = { workspace = true }
color-eyre         = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

krypt-core     = { workspace = true }
krypt-pkg      = { workspace = true }
krypt-platform = { workspace = true }
