[package]
name          = "krypt-core"
description   = "Core engine for the `krypt` dotfiles manager: config, paths, copy, manifest, runner."
version.workspace      = true
authors.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
readme.workspace       = true

[dependencies]
serde     = { workspace = true }
toml      = { workspace = true }
tracing   = { workspace = true }
thiserror = { workspace = true }
