[package]
name          = "krypt-core"
description   = "Core engine for the `krypt` dotfiles manager: config, paths, copy, manifest, runner."
version.workspace      = true
authors.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
readme.workspace       = true

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }
tracing    = { workspace = true }
thiserror  = { workspace = true }
glob       = { workspace = true }
sha2       = { workspace = true }
which      = { workspace = true }
dialoguer  = { workspace = true }
gix = { git = "https://github.com/mxaddict/gitoxide", branch = "feat/gix-stash", features = [
    "blocking-http-transport-reqwest-rust-tls",
    "worktree-mutation",
    "status",
    "revision",
    "stash",
    "merge",
] }
gix-actor         = { git = "https://github.com/mxaddict/gitoxide", branch = "feat/gix-stash" }
gix-diff          = { git = "https://github.com/mxaddict/gitoxide", branch = "feat/gix-stash", default-features = false, features = ["blob"] }
gix-filter        = { git = "https://github.com/mxaddict/gitoxide", branch = "feat/gix-stash" }
gix-merge         = { git = "https://github.com/mxaddict/gitoxide", branch = "feat/gix-stash" }
gix-worktree      = { git = "https://github.com/mxaddict/gitoxide", branch = "feat/gix-stash", default-features = false }
gix-worktree-state = { git = "https://github.com/mxaddict/gitoxide", branch = "feat/gix-stash" }

[dev-dependencies]
tempfile  = { workspace = true }
smallvec  = "1"
