[package]
name          = "krypt-pkg"
description   = "Package manager abstraction for the `krypt` dotfiles manager: pacman, apt, brew, scoop, winget, dnf."
version.workspace      = true
authors.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
readme.workspace       = true

[dependencies]
thiserror  = { workspace = true }
which      = { workspace = true }
